docs: Complete documentation restructuring and optimization

--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,178 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Getting Started"
+description: "Welcome to JoggAI API - Create dynamic AI-powered videos effortlessly"
 ---
 
-## Setting up
+## Welcome to JoggAI API
 
-Get your documentation site up and running in minutes.
+The JoggAI API unlocks new possibilities, enabling you to effortlessly create dynamic avatar videos and seamlessly integrate JoggAI's advanced AI features into your product.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
-
-## Make it yours
-
-Design a docs site that looks great and empowers your users.
-
-<Columns cols={2}>
+<CardGroup cols={2}>
   <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
+    title="Quick Start"
+    icon="rocket"
+    href="/api-reference/joggai-introduction"
   >
-    Edit your docs locally and preview them in real time.
+    Get started with JoggAI API in 5 minutes
   </Card>
   <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
-
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
+    title="API Reference"
     icon="code"
-    href="/essentials/code"
+    href="/api-reference/openapi-v2"
   >
-    Add sample code to demonstrate how to use your product.
+    Complete API endpoint documentation
   </Card>
   <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
+    title="Workflows"
+    icon="diagram-project"
+    href="/api-reference/workflows/product-video-workflow"
   >
-    Display images and other media.
+    Step-by-step guides for common use cases
   </Card>
   <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
+    title="Authentication"
+    icon="key"
+    href="/guides/authentication"
   >
-    Write once and reuse across your docs.
+    Learn how to authenticate API requests
   </Card>
-</Columns>
+</CardGroup>
 
-## Need inspiration?
+## Core Features
 
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+<CardGroup cols={3}>
+  <Card title="Avatar Videos" icon="user">
+    Create talking avatar videos with 200+ professional avatars
+  </Card>
+  <Card title="Product Videos" icon="shopping-cart">
+    Auto-generate marketing videos from product information
+  </Card>
+  <Card title="AI Scripts" icon="wand-magic-sparkles">
+    AI-powered script generation for your videos
+  </Card>
+  <Card title="40+ Languages" icon="language">
+    Text-to-speech and video translation support
+  </Card>
+  <Card title="Templates" icon="layer-group">
+    Quick batch video generation with templates
+  </Card>
+  <Card title="Video Translation" icon="globe">
+    Translate videos into multiple languages
+  </Card>
+</CardGroup>
+
+## Quick Start
+
+<Steps>
+  <Step title="Create an Account">
+    Sign up at [JoggAI Console](https://dashboard.jogg.ai) to create your account
+  </Step>
+  <Step title="Get API Key">
+    Navigate to API section in your dashboard to obtain your API key
+    
+    ```bash
+    curl -X GET 'https://api.jogg.ai/open/v2/user/whoami' \
+      -H 'x-api-key: YOUR_API_KEY'
+    ```
+  </Step>
+  <Step title="Create Your First Video">
+    Use the API to create a product video
+    
+    ```bash
+    curl -X POST 'https://api.jogg.ai/open/v2/product' \
+      -H 'x-api-key: YOUR_API_KEY' \
+      -H 'Content-Type: application/json' \
+      -d '{
+        "name": "Your Product",
+        "description": "Product description"
+      }'
+    ```
+  </Step>
+  <Step title="Check Video Status">
+    Monitor your video generation progress
+    
+    <Check>
+    Video generation typically takes 3-8 minutes
+    </Check>
+  </Step>
+</Steps>
+
+## Consumption
+
+### Video Generation Credits
+
+**a. Generated video consumption based on duration:**
+- 1 API credit per 2 minutes of video
+- Less than 2 minutes = 1 API credit
+
+**b. Preview video consumption:**
+- 0.5 API credit per 2 minutes
+- Less than 2 minutes = 0.5 API credit
+
+**c. AI Scripts API:**
+- 0.2 API credit per call
+
+**d. Image Generation:**
+- Each call generates 4 images
+- 0.05 credit per image
+- Total: 0.2 credit per call
+
+**e. Motion Generation:**
+- Motion 1.0: 2 credits
+- Motion 2.0: 2 credits
+- Motion 2.0 Pro: 3 credits
+
+## Popular Resources
+
+<CardGroup cols={2}>
+  <Card
+    title="Product Video Workflow"
+    icon="shopping-bag"
+    href="/api-reference/workflows/product-video-workflow"
+  >
+    Complete guide to generating product marketing videos
+  </Card>
+  <Card
+    title="Avatar Video Workflow"
+    icon="user"
+    href="/api-reference/workflows/avatar-video"
+  >
+    Create talking avatar videos with custom scripts
+  </Card>
+  <Card
+    title="Video Translation"
+    icon="language"
+    href="/api-reference/workflows/video-translation"
+  >
+    Translate videos into 40+ languages
+  </Card>
+  <Card
+    title="Error Handling"
+    icon="triangle-exclamation"
+    href="/guides/error-handling"
+  >
+    Learn about error codes and handling
+  </Card>
+</CardGroup>
+
+## API Capabilities
+
+<CardGroup cols={3}>
+  <Card title="99.9% Uptime" icon="check">
+    Enterprise-grade reliability
+  </Card>
+  <Card title="3-8 Minutes" icon="clock">
+    Average video generation time
+  </Card>
+  <Card title="40+ Languages" icon="language">
+    Global language support
+  </Card>
+</CardGroup>
+
+## Need Help?
+
+If you have any questions about using the API, please reach out to us at [support@jogg.ai](mailto:support@jogg.ai).
+
+<Note>
+  **Getting Started** - Check out our [API Introduction](/api-reference/joggai-introduction) and [Workflow Guides](/api-reference/workflows/product-video-workflow)
+</Note>
