--- a/api-reference/v2/API Documentation/AvatarVideosWithAudioSource.mdx
+++ b/api-reference/v2/API Documentation/AvatarVideosWithAudioSource.mdx
@@ -8,7 +8,7 @@ description: "Use your own audio file instead of text-to-speech"
 Use your own audio recordings instead of text-to-speech for complete control over voice, timing, and delivery. Perfect for professional voice-overs, branded audio, or languages not supported by TTS.
 
 <Info>
-**Specialized Scenario:** This guide focuses on using custom audio files. For the complete avatar video creation guide, see [Create Avatar Videos](/api-reference/v2/API Documentation/CreateAvatarVideos).
+**Specialized Scenario:** This guide focuses on using your own audio files instead of text-to-speech.
 </Info>
 
 ---
@@ -209,7 +209,7 @@ ffmpeg -i input.mp3 -filter:a loudnorm output.mp3
   <Card
     title="Create Avatar Videos"
     icon="user"
-    href="/api-reference/v2/API Documentation/CreateAvatarVideos"
+    href="/api-reference/v2/API%20Documentation/CreateAvatarVideos"
   >
     Main avatar video guide
   </Card>
@@ -217,7 +217,7 @@ ffmpeg -i input.mp3 -filter:a loudnorm output.mp3
   <Card
     title="Upload Media"
     icon="upload"
-    href="/api-reference/v2/API Documentation/UploadMedia"
+    href="/api-reference/v2/API%20Documentation/UploadMedia"
   >
     Upload audio files
   </Card>
