--- a/api-reference/v2/API Documentation/AvatarVideosTransparentBackground.mdx
+++ b/api-reference/v2/API Documentation/AvatarVideosTransparentBackground.mdx
@@ -8,7 +8,7 @@ description: "Generate avatars with transparent backgrounds for easy compositing
 Create avatar videos with transparent backgrounds (alpha channel) for easy compositing over other content. Perfect for presentations, video editing, or web applications.
 
 <Info>
-**Specialized Scenario:** This guide focuses on transparent background videos. For the complete avatar video creation guide, see [Create Avatar Videos](/api-reference/v2/API Documentation/CreateAvatarVideos).
+**Specialized Scenario:** This guide focuses on creating avatar videos with transparent backgrounds for easy compositing.
 </Info>
 
 ---
@@ -265,7 +265,7 @@ curl --request POST \
   <Card
     title="Create Avatar Videos"
     icon="user"
-    href="/api-reference/v2/API Documentation/CreateAvatarVideos"
+    href="/api-reference/v2/API%20Documentation/CreateAvatarVideos"
   >
     Main avatar video guide
   </Card>
