--- a/api-reference/v2/API Documentation/CreateAvatarVideos.mdx
+++ b/api-reference/v2/API Documentation/CreateAvatarVideos.mdx
@@ -269,7 +269,7 @@ curl --request GET \
 ```
 
 <Tip>
-Instead of polling, use [Webhooks](/api-reference/v2/API Documentation/WebhookIntegration) to get notified instantly when videos are ready!
+Instead of polling, use [Webhooks](/api-reference/v2/API%20Documentation/WebhookIntegration) to get notified instantly when videos are ready!
 </Tip>
 
 ---
@@ -310,36 +310,6 @@ Instead of polling, use [Webhooks](/api-reference/v2/API Documentation/WebhookIn
 
 ## Related Documentation
 
-### Scenario Guides
-
-<CardGroup cols={3}>
-  <Card
-    title="With Photo Avatar"
-    icon="camera"
-    href="/api-reference/v2/API Documentation/AvatarVideosWithPhotoAvatar"
-  >
-    Use custom photo avatars
-  </Card>
-  
-  <Card
-    title="Transparent Background"
-    icon="circle"
-    href="/api-reference/v2/API Documentation/AvatarVideosTransparentBackground"
-  >
-    Videos with transparent BG
-  </Card>
-  
-  <Card
-    title="With Audio Source"
-    icon="waveform"
-    href="/api-reference/v2/API Documentation/AvatarVideosWithAudioSource"
-  >
-    Use custom audio files
-  </Card>
-</CardGroup>
-
-### API References
-
 <CardGroup cols={2}>
   <Card
     title="Avatar List API"
@@ -368,7 +338,7 @@ Instead of polling, use [Webhooks](/api-reference/v2/API Documentation/WebhookIn
   <Card
     title="Webhook Setup"
     icon="webhook"
-    href="/api-reference/v2/API Documentation/WebhookIntegration"
+    href="/api-reference/v2/API%20Documentation/WebhookIntegration"
   >
     Get instant notifications
   </Card>
